--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(); 
+  background-image: url(Some.jpg); 
   text-align:center;
   color: white;
   font-family: 'Raleway', sans-serif;
