--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ hr{
 }
 .logo-j{
      color: white;
-    font-size: xx-large;
+    font-size: x-large;
     font-weight: bolder;
     text-decoration: none;
      position: absolute;
